--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ deps =
     dj40: Django>=4.0,<4.1
     dj41: Django>=4.1.2,<4.2
     djmain: https://github.com/django/django/archive/main.tar.gz
+passenv =
+    KAFKA_BOOTSTRAP_SERVERS
 
 [testenv:coverage]
 extras = tests
