--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ long_description = file: README.rst
 long_description_content_type = text/x-rst
 license = BSD
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 4 - Beta
     Environment :: Web Environment
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
