Fix Python/Django version matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,9 @@
 envlist =
     py{37,38,39,310}-dj32
     py{38,39,310}-dj40
-    py{38,39,310,311}-dj{41,main}
+    py{38,39,310,311}-dj41
+    py{310,311}-dj42
+    py311-djmain
     qa
 
 [testenv]
@@ -14,6 +16,7 @@ deps =
     py37-dj32: importlib-metadata<5.0
     dj40: Django>=4.0,<4.1
     dj41: Django>=4.1.2,<4.2
+    dj42: Django>=4.2.1,<4.3
     djmain: https://github.com/django/django/archive/main.tar.gz
 passenv =
     KAFKA_BOOTSTRAP_SERVERS
