--- a/setup.cfg
+++ b/setup.cfg
@@ -16,11 +16,11 @@ classifiers =
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Framework :: Django
     Framework :: Django :: 3
     Framework :: Django :: 3.2
@@ -28,15 +28,17 @@ classifiers =
     Framework :: Django :: 4.0
     Framework :: Django :: 4.1
     Framework :: Django :: 4.2
+    Framework :: Django :: 5.0
+    Framework :: Django :: 5.1
 
 [options]
 packages = find:
 include_package_data = True
 install_requires =
     Django>=3.2
-    kafka-python>=2.0.2
+    kafka-python-ng>=2.2.2
     celery>=5.1.0
-python_requires = >=3.7
+python_requires = >=3.8
 
 [options.extras_require]
 tests =
