Add type hinting. Add mypy checker. Drop support for Python 3.8 and 3.9

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
-    py{38,39,310}-dj32
-    py{38,39,310}-dj40
-    py{38,39,310,311}-dj41
+    py310-dj32
+    py{310,311}-dj40
+    py{310,311}-dj41
     py{310,311}-dj42
     py{311,312}-dj50
     py{311,312}-dj51
@@ -34,9 +34,13 @@ commands =
 skip_install=true
 deps =
     black
-    flake8
+    Flake8-pyproject
     isort
+    mypy
+    django-stubs[compatible-mypy]
+    celery-types
 commands =
     flake8 kafkastreamer tests
     black --check --diff kafkastreamer tests
     isort --check-only --diff kafkastreamer tests
+    mypy kafkastreamer
